vector view page no longer breaks on long titles

--- a/projects/demo/src/app/vector/view/view.component.scss
+++ b/projects/demo/src/app/vector/view/view.component.scss
@@ -1,4 +1,3 @@
-
 :host {
   // position: absolute;
   // width: 100%;
@@ -21,4 +20,11 @@
 app-vector-preview {
   height: 100%;
   width: 100%;
+}
+mat-toolbar {
+  overflow: hidden;
+}
+#Title {
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
